Added written report
Fixed grammatic issues in the notebook

--- a/projet.ipynb
+++ b/projet.ipynb
@@ -14,20 +14,7 @@
    "id": "04f03237-a27b-4415-aa07-b7b7b2420ec3",
    "metadata": {},
    "source": [
-    "Package MTCFeatures: https://pvankranenburg.github.io/MTCFeatures/\n",
-    "\n",
-    "Pour récupérer les MIDI ou pdf pour que ce soit plus visuel (en particulier, c'est le dataset MTC-FS-INST (900Mb)): https://www.liederenbank.nl/mtc"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "86a957a9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# décommenter pour installer le package une fois pour toutes\n",
-    "# !pip install MTCFeatures"
+    "Package MTCFeatures: https://pvankranenburg.github.io/MTCFeatures/"
    ]
   },
   {
@@ -60,7 +47,7 @@
    "outputs": [],
    "source": [
     "fl = MTCFeatureLoader('MTC-FS-INST-2.0')\n",
-    "seqs = fl.sequences()\n"
+    "seqs = fl.sequences()"
    ]
   },
   {
@@ -676,10 +663,10 @@
    "id": "c21754b3",
    "metadata": {},
    "source": [
-    "## Task 1: Choosing right attributes\n",
-    "To make predictions for `phrase_end` (which indicates whether the tune is the ending of a song), first we need to determine which attributes affect the target attribute most. **Correlation analysis** is the best method for this purpose.  \n",
+    "## Task 1: Choosing the right attributes\n",
+    "To predict the `phrase_end` (which indicates whether the tune is the ending of a song), we first need to determine which attributes affect the target attribute most. **Correlation analysis** is the best method for this purpose.  \n",
     "\n",
-    "However, it requires only single numerical values. Since the values are stored in arrays for each song, we need to extract each individual tune and store them as a single record by applying the _explosion method_ to the dataset."
+    "However, it accepts only single numerical values. Since the values are stored in arrays for each song, we need to extract each individual tune and store them as a single record by applying the _explosion method_ to the dataset."
    ]
   },
   {
@@ -1070,22 +1057,9 @@
    "metadata": {},
    "source": [
     "## Task 2: Training models\n",
-    "\n",
-    "We chose 4 models to predict our target variable: \n",
-    "* Logistic Regression\n",
-    "* Decision Tree\n",
-    "* Random Forest\n",
-    "* Neural networks"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2ce4e8ed",
-   "metadata": {},
-   "source": [
-    "Before training the models on this dataset, we have to make sure that the dataset is fully prepared for training. Unfortunately, there is one problem: **NaN** values are scattered everywhere in the dataset. Some attributes have many, while others contain a small portion of it. We decided to implement different strategies to solve this problem:\n",
-    "1. **Columns with more than 90% NaN values**: These attributes will not significantly affect the predictions since the majority of values are NaN. Therefore, we can confidently remove these columns.\n",
-    "2. **Columns with a moderate number of NaN values**: We can use *imputation*, which fills NaN values with certain values obtained using a strategy such as *mean, median,* or *mod*. We chose to use *mean imputation*, meaning that for a single column, the average of its values will be computed, then all NaN values will be replaced by this value. This helps to keep the relationship between values.\n",
+    "Before training the models on the dataset, we have to make sure that the dataset is fully prepared for training. Unfortunately, there is one problem: **NaN** values are scattered everywhere in the dataset. Some attributes have many, while others contain a small portion of them. We decided to implement different strategies to solve this problem:\n",
+    "1. **Columns with more than 90% NaN values**: These attributes will not significantly affect the predictions since the majority of the values are NaN. Therefore, we can confidently remove these columns.\n",
+    "2. **Columns with a moderate number of NaN values**: We can use *imputation*, which fills NaN values with certain values obtained using a strategy such as *mean, median,* or *mode*. We chose to use **mean imputation**, meaning that for a single column, the average of its values will be computed, and then all NaN values will be replaced by this value. This helps to keep the relationship between values.\n",
     "3. **Columns with relatively few NaN values**: Since these columns are critical for predictions, the best method is to *remove the records* where these columns have NaN values."
    ]
   },
@@ -1185,7 +1159,12 @@
    "id": "19c4b64b",
    "metadata": {},
    "source": [
-    "##### The data is ready. Now we can split the data into training and test sets, and train models for making predictions."
+    "##### The data is ready. Now we can split the data into training and test sets, and train models for making predictions.\n",
+    "We chose 4 models to predict the target variable: \n",
+    "* Logistic Regression\n",
+    "* Decision Tree\n",
+    "* Random Forest\n",
+    "* Neural networks"
    ]
   },
   {
@@ -1289,7 +1268,7 @@
    "id": "1b8de65b",
    "metadata": {},
    "source": [
-    "We can see that `phrasepos` attribute has very high coefficient magnitude compared to others. This means that the model heavily relies on it to make predictions, not accounting for the input from other features. So, the model is not generalizing, but rather making predictions based on the `phrasepos` attribute. So, we will remove it from the dataset and train the model again."
+    "We can see that the `phrasepos` attribute has a very high coefficient compared to others. This means that the model heavily relies on it to make predictions, not accounting for the input from other features. So, the model is not generalizing but rather making predictions based on the `phrasepos` attribute. So, we will remove it from the dataset and train the model again."
    ]
   },
   {
@@ -1324,7 +1303,7 @@
    "id": "2df90b31",
    "metadata": {},
    "source": [
-    "Accuracy of the model dropped. This shows that there is no overfitting and the model is doing a great job in generalization. Let's make sure that feature importance coefficients are evenly distributed."
+    "The accuracy of the model dropped. This shows that there is no overfitting and the model is doing a great job in generalization. Let's make sure that feature importance coefficients are evenly distributed."
    ]
   },
   {
@@ -1382,11 +1361,11 @@
    "id": "d224702e",
    "metadata": {},
    "source": [
-    "##### This table confirms that the importance is evenly distributed on the features. So, it is a great result.\n",
+    "##### This table confirms that the importance is evenly distributed among the features. So, it is a great result.\n",
     "##### To verify the legitimacy of the score, we use three strategies: \n",
     "1. Comparing the training and test accuracy. \n",
     "2. Performing a cross-validation.\n",
-    "3. Checking the feature importance (if they are evenly distributed)"
+    "3. Checking the feature importance (if it is evenly distributed)"
    ]
   },
   {
@@ -1428,7 +1407,7 @@
    "id": "58776dd9",
    "metadata": {},
    "source": [
-    "##### Verifying the score of the Decision Tree using the same strategies"
+    "##### Verifying the score of the Decision Tree using the same strategies:"
    ]
   },
   {
@@ -1520,7 +1499,7 @@
    "id": "adc69b2c",
    "metadata": {},
    "source": [
-    "##### Verifying the score of the Random Forest using the same strategies"
+    "##### Verifying the score of the Random Forest using the same strategies:"
    ]
   },
   {
@@ -1609,7 +1588,7 @@
    "id": "0d275292",
    "metadata": {},
    "source": [
-    "##### Verifying the score of the Neural Network by using the same strategies"
+    "##### Verifying the score of the Neural Network by using the same strategies:"
    ]
   },
   {
@@ -1699,9 +1678,9 @@
    "metadata": {},
    "source": [
     "## Conclusion\n",
-    "In conclusion, our aim was to predict whether a tune was the ending of a song or not. First we had to remake the dataset in a way that each tune is stored as a record. This allows us to use models on it. Then, we had to prepare data by choosing the right attributes that contribute the most in making the predictions more accurate. Afterwards, we had to deal with NaN values that were scattered everywhere using different strategies. \n",
+    "In conclusion, we aimed to predict whether a tune was the ending of a song. First, we had to remake the dataset so that each tune was stored as a record. This allows us to use models on it. Then, we had to prepare data by choosing the attributes that contribute the most to making the predictions more accurate. Afterward, we had to deal with NaN values that were scattered everywhere using different strategies. \n",
     "\n",
-    "We used four prediction models to predict whether a tune is the end of a song or not. We had to play with hyperparameters of models to reduce the computation time while keeping the accuracy of predictions at a high level. `Random Forest` performed the best among all. On the other hand, `Logistic Regression` trains the fastest, although it has the lowest score among others (83.98%).\n",
+    "We used four prediction models to make predictions. We had to play with hyperparameters of models to reduce the computation time while keeping the accuracy of predictions at a high level. `Random Forest` performed the best among all. On the other hand, `Logistic Regression` trains the fastest, although it has the lowest score among others (83.98%).\n",
     "\n"
    ]
   }
